...
          <View>
            <Input
              autoFocus={true}
              label="Restaurant Name"
              value={restaurantName}
              onChangeText={val => this.handleTextChange(val)}
              testID="reataurantNameField"
              errorMessage={errorMessage}
            />
          </View>
          <View style={{ marginTop: 20 }}>
            <Button
              onPress={this.handleOnSave}
              testID="submitRestaurant"
              title="Submit"
            />
          </View>
          <View style={{ marginTop: 20 }}>
            <Button
              onPress={this.handkeOnCancel}
...
